--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
+    <script src="./dist/main.js"></script>
     <title>Document</title>
   </head>
 
   <body>
-    <script src="./dist/main.js"></script>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
