--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <script src="./dist/main.js"></script>
+    <script src="./src/lib/three.min.js"></script>
     <title>Document</title>
   </head>
-
+  
   <body>
     <canvas id="canvas"></canvas>
+    <script src="./dist/main.js"></script>
     <script src="./src/game.js"></script>
   </body>
 </html>
