--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./src/lib/three.min.js"></script>
-    <title>Document</title>
+    <title>Traintris</title>
   </head>
   
   <body>
