Finish the classic Tetris

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
   </head>
   
   <body>
+    <div class='status-bar'>
+      <div class='title'>
+        <h1>TrainTris</h1>
+      </div>
+      <div class='next-container'>
+        <h2>Next Piece</h2>
+        <div class='next-canvas-container'>
+          <canvas id='nextTetromino'></canvas>
+        </div>
+      </div>
+      <div class='container'>
+        <h2>Score</h2>
+        <h2 id='score' class='holder'>0</h2>
+      </div>
+      <div class='container'>
+        <h2>Level</h2>
+        <h2 id='level' class='holder'>1</h2>
+      </div>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
