Add bgm and sfx

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   
   <body>
-    <audio src="./src/assets//Original Tetris theme.mp3" preload="auto"></audio>
+    <audio id='bgm' volume='0.5' src="./src/assets/bgm.mp3" autoplay></audio>
+    <audio id='harddrop' src="./src/assets/move.mp3" autoplay></audio>
+    <audio id='clearrow' src="./src/assets/collision.mp3" autoplay></audio>
     <div class='modal show'>
       <div>
         <h2 id='message'>Welcome</h2>
