Final change before going into ML

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <div class='modal show'>
       <div>
         <h2 id='message'>Welcome</h2>
-        <button id='start'>Start</button>
-        <button id='modalmute'>Mute</button>
+        <div>
+          <button id='start'>Start</button>
+          <button id='modalmute'>Mute</button>
+        </div>
         <div class='container'>
           <p id='instruction'>Or press Q to start</p>
         </div>
@@ -42,11 +44,15 @@
           <h2 id='level' class='holder'>1</h2>
         </div>
         <div class='container'>
+          <h2>Training Entries</h2>
+          <h2 id='td' class='holder'>0</h2>
+        </div>
+        <div class='container'>
           <p>Press <span>Q</span> to pause, <span>A</span> to move left, <span>D</span> to move right, <span>Space</span> to rotate and <span>W</span> to hard drop.</p>
         </div>
         <div class='container'>
-          <button id='mute'>Mute</button>
           <button id='restart'>Restart</button>
+          <button id='mute'>Mute</button>
         </div>
       </div>
     </main>
