Add training methods and buttons

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <button id='restart'>Restart</button>
           <button id='mute'>Mute</button>
         </div>
+          <button id='savedata'>Save Data</button>
+          <button id='cleardata'>Clear Data</button>
+          <button id='pmode' disabled>Predict Mode : OFF</button>
       </div>
     </main>
     <script src="./dist/main.js"></script>
