--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
           <button id='restart'>Restart</button>
           <button id='mute'>Mute</button>
         </div>
+        <div class='container'>
+          <p>By <span>Zhiyuan He</span></p>
+        </div>
       </div>
     </main>
     <script src="./dist/main.js"></script>
