Minor style modification

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <button id='modalmute'>Mute</button>
         </div>
         <div class='container'>
-          <p id='instruction'>Or press Q to start</p>
+          <p id='instruction'>Or press <span>Q</span> to start</p>
         </div>
       </div>
     </div>
@@ -55,6 +55,7 @@
       <div class='status-bar'>
         <div class='title'>
           <h1>TrainTris</h1>
+          <p>By <span>Zhiyuan He</span></p>
         </div>
         <div class='next-container'>
           <h2>Next Piece</h2>
@@ -76,9 +77,6 @@
         <div class='container'>
           <button id='restart'>Restart</button>
           <button id='mute'>Mute</button>
-        </div>
-        <div class='container'>
-          <p>By <span>Zhiyuan He</span></p>
         </div>
       </div>
     </main>
