Minor fix for styling

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           <h2 id='level' class='holder'>1</h2>
         </div>
         <div class='container'>
+          <h2>Training Entries</h2>
+          <h2 id='td' class='holder'>0</h2>
+        </div>
+        <div class='container'>
           <p>Press <span>Q</span> to pause, <span>A</span> to move left, <span>D</span> to move right, <span>Space</span> to rotate and <span>W</span> to hard drop.</p>
         </div>
         <div class='container'>
