Final touch of style in classic tetris branch

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   
   <body>
-    <audio id='bgm' volume='0.5' src="./src/assets/bgm.mp3" autoplay loop></audio>
-    <audio id='harddrop' src="./src/assets/move.mp3" autoplay></audio>
-    <audio id='clearrow' src="./src/assets/collision.mp3" autoplay></audio>
+    <audio id='bgm' volume='0.5' src="./src/assets/bgm.mp3" loop></audio>
+    <audio id='harddrop' src="./src/assets/move.mp3"></audio>
+    <audio id='clearrow' src="./src/assets/collision.mp3"></audio>
     <div class='modal show'>
       <div>
         <h2 id='message'>Welcome</h2>
