--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   
   <body>
-    <audio id='bgm' volume='0.5' src="./src/assets/bgm.mp3" autoplay loop></audio>
-    <audio id='harddrop' src="./src/assets/move.mp3" autoplay></audio>
-    <audio id='clearrow' src="./src/assets/collision.mp3" autoplay></audio>
+    <audio id='bgm' volume='0.5' src="./src/assets/bgm.mp3" loop></audio>
+    <audio id='harddrop' src="./src/assets/move.mp3"></audio>
+    <audio id='clearrow' src="./src/assets/collision.mp3"></audio>
     <div class='modal show'>
       <div>
         <h2 id='message'>Welcome</h2>
@@ -57,12 +57,6 @@
           <h1>TrainTris</h1>
           <p>By <span>Zhiyuan He</span></p>
         </div>
-        <div class='next-container'>
-          <h2>Next Piece</h2>
-          <div class='next-canvas-container'>
-            <canvas id='nextTetromino'></canvas>
-          </div>
-        </div>
         <div class='container'>
           <h2>Score</h2>
           <h2 id='score' class='holder'>0</h2>
@@ -76,7 +70,7 @@
           <h2 id='td' class='holder'>0</h2>
         </div>
         <div class='container'>
-          <p>Press <span>Q</span> to pause, <span>A</span> to move left, <span>D</span> to move right, <span>Space</span> to rotate and <span>W</span> to hard drop.</p>
+          <p>Press <span>Q</span> to pause, <span>A</span> to move left, <span>D</span> to move right, <span>Space</span> to rotate, <span>W</span> to hard drop and <span>E</span> to put the current tetromino into hold.</p>
         </div>
         <div class='container'>
           <button id='restart'>Restart</button>
@@ -84,9 +78,34 @@
         </div>
           <button id='savedata'>Save Data</button>
           <button id='cleardata'>Clear Data</button>
-          <button id='pmode' disabled>Predict Mode : OFF</button>
+          <button id='pmode'>Predict Mode : OFF</button>
+          <p><span>Warning!</span> When <span>Predict Mode</span> is <span>On</span>, this game will have extremely high CPU usage when training and will cause the game to lag.</p>
+          <button id='tmode'>Training Mode : OFF</button>
+          <p> If <span>Training Mode</span> is <span>On</span>, auto dropdown is disabled. Take your time to make the best decision! Press <span>W</span> to decide.</p>
+      </div>
+      <div id='canvas-holder'></div>
+      <div class='status-bar'>
+        <div class='next-container'>
+          <h2 class='right'>Hold</h2>
+          <div class='next-canvas-container right'>
+            <canvas id='holdTetromino'></canvas>
+          </div>
+          <h2>Next Piece</h2>
+          <div class='next-container'>
+            <div class='next-canvas-container right'>
+              <canvas id='nextTetromino'></canvas>
+            </div>
+            <div class='next-canvas-container right'>
+              <canvas id='nextTetromino2'></canvas>
+            </div>
+            <div class='next-canvas-container right'>
+              <canvas id='nextTetromino3'></canvas>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
+    
     <script src="./dist/main.js"></script>
   </body>
 </html>
