--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </path>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/zhiyan-he-mike">
+        <a href="https://www.linkedin.com/in/zhiyuan-he-mike">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin"
             class="svg-inline--fa fa-linkedin fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path fill="#1073C4"
