Fix some of issues

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         </div>
         <div class='container'>
           <p id='instruction'>Or press <span>Q</span> to start</p>
+          <p><span>Warning!</span> When <span>Predict Mode</span> is <span>On</span>, this game will have extremely high CPU usage
+            when training and may cause the game to lag.</p>
         </div>
       </div>
     </div>
     <main id='main'>
       <div class='links'>
-        <a href="https://angel.co/zhiyuan-he-2">
+        <a href="https://angel.co/zhiyuan-he-2" target="_blank">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="angellist"
             class="svg-inline--fa fa-angellist fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path fill="#1073C4"
@@ -38,7 +40,7 @@
             </path>
           </svg>
         </a>
-        <a href="https://github.com/zbmike">
+        <a href="https://github.com/zbmike" target="_blank">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" class="svg-inline--fa fa-github fa-w-16"
             role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
             <path fill="#1073C4"
@@ -46,7 +48,7 @@
             </path>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/zhiyuan-he-mike">
+        <a href="https://www.linkedin.com/in/zhiyuan-he-mike" target="_blank">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin"
             class="svg-inline--fa fa-linkedin fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path fill="#1073C4"
@@ -73,7 +75,7 @@
           <h2 id='td' class='holder'>0</h2>
         </div>
         <div class='container'>
-          <p>Press <span>Q</span> to pause, <span>A</span> to move left, <span>D</span> to move right, <span>Space</span> to rotate, <span>W</span> to hard drop and <span>E</span> to put the current tetromino into hold.</p>
+          <p>Press <span>Q</span> to pause, <span>Space</span> to rotate, <span>E</span> to put the current tetromino into hold. Use <span>arrow keys</span> or <span>A</span> to move left, <span>D</span> to move right, and <span>W</span> to hard drop</p>
         </div>
         <div class='container'>
           <button id='restart'>Restart</button>
@@ -82,7 +84,7 @@
           <button id='savedata'>Save Data</button>
           <button id='cleardata'>Clear Data</button>
           <button id='pmode'>Predict Mode : OFF</button>
-          <p><span>Warning!</span> When <span>Predict Mode</span> is <span>On</span>, this game will have extremely high CPU usage when training and will cause the game to lag.</p>
+          <p> If <span>Predict Mode</span> is <span>On</span>, the game will train a Neural Network when <span>Training Entries</span> reaches <span>50</span> and will begin to predict after it's finished</p>
           <button id='tmode'>Training Mode : OFF</button>
           <p> If <span>Training Mode</span> is <span>On</span>, auto dropdown is disabled. Take your time to make the best decision! Press <span>W</span> to decide.</p>
       </div>
